--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss-nested": "^6.0.1",
+    "prettier": "3.2.5",
     "typescript": "^5.2.2",
     "vite": "^5.1.6"
   }
